# clipster

./: CLAUDE.md  README.md  package-lock.json  package.json
.claude/tasks/02-clipboard-types-preview-source-icons/: analyze.md  implementation.md  plan.md
.claude/tasks/02-clipboard-types-preview-source-icons/tasks/: index.md  task-01.md  task-02.md  task-03.md  task-04.md  task-05.md  task-06.md  task-07.md  task-08.md  task-09.md  task-10.md  task-11.md  task-12.md
.claude/tasks/03-file-preview-system/: analyze.md  implementation.md  plan.md
.claude/tasks/04-rebuild-drag-drop-system/: SOLUTION_EXPLANATION.md  TESTING_CHECKLIST.md  analyze.md  implementation.md  plan.md  seed.md
.claude/tasks/04-rebuild-drag-drop-system/tasks/: index.md  task-01.md  task-02.md  task-03.md  task-04.md
.claude/tasks/05-html5-drag-implementation/: analyze.md  implementation.md  plan.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.claude/tasks/01-fix-drag-visual-card/: analyze.md  debug-native-image-drag.md  fix-clone-disappears-immediately.md  fix-plugin-icon-preview.md  fix-tauri-drop-behavior.md  implementation.md  plan.md
src-tauri/.claude/tasks/01-fix-drag-visual-card/tasks/: index.md  task-01-implementation.md  task-01.md  task-02-implementation.md  task-02.md  task-03.md
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/clipboard/: clipboard_monitor.rs  clipboard_reader.rs  mod.rs  og_fetcher.rs
src-tauri/src/commands/: clipboard_commands.rs  mod.rs  pinboard_commands.rs  settings_commands.rs  window_commands.rs
src-tauri/src/models/: clipboard_item.rs  mod.rs  pinboard.rs
src-tauri/src/storage/: database.rs  file_storage.rs  mod.rs
src-tauri/src/windows_api/: clipboard_monitor.rs  clipboard_reader.rs  mod.rs  windows_api.rs
src/assets/: tailwind.css
src/components/: ClipboardCard.vue  ClipboardCard.vue.backup  PinboardTabs.vue  SearchBar.vue  Settings.vue  Timeline.vue
src/components/display-paste/: List.vue
src/composables/: useKeyboard.ts
src/stores/: clipboard.ts  index.ts  pinboards.ts  settings.ts
src/types/: clipboard.ts
